--- a/src/components/timer/timer.css
+++ b/src/components/timer/timer.css
@@ -344,6 +344,11 @@
 }
 
 @media (max-width: 768px) {
+  @media (max-width: 410px) {
+    .slogan {
+      font-size: 24px;
+    }
+  }
   .wrap-timer {
     min-width: 100%;
     align-items: center;
@@ -358,13 +363,17 @@
   }
   .slogan {
     text-align: center;
-    margin: 0 0 10px 0;
-    font-size: 12px;
-    max-width: 90%;
+    margin: 0 0 30px 0;
+
+    font-size: 24px;
+    width: 90%;
+    overflow-wrap: break-word;
+    white-space: normal;
     position: absolute;
     top: 250px;
     z-index: -1;
   }
+
   .timerContainer {
     position: absolute;
     top: 300px;
@@ -372,10 +381,12 @@
     gap: 10px;
     max-width: 90%;
     z-index: -1;
+    margin-top: 30px;
   }
   .registerContainer {
     position: absolute;
     top: 500px;
     z-index: -1;
+    margin-top: 80px;
   }
 }
